# Api-Ort-Fruit-Rocket-rust

./: .env  Cargo.toml  README.md  diesel.toml  docker-compose.yml
migrations/2024-07-11-223651_create_product/: up.sql
src/: main.rs  schema.rs
src/controllers/: home_controller.rs  login_controller.rs  mod.rs  products_controller.rs  recursos_controller.rs
src/database/: database_config.rs  mod.rs
src/database/models/: product.rs
src/database/repository/: product_repository.rs
src/dtos/: login_dto.rs  mod.rs  product_dto.rs  recurso_dto.rs
src/middlewares/: auth_guard.rs
src/models/: administrator.rs  error_json.rs  mod.rs  recurso.rs
src/models_view/: home.rs
src/service/: administrator_service.rs  mod.rs  product_service.rs  recursos_service.rs
src/tests/: mod.rs  tests_requests.rs
