[package]
name = "rocket-json"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
figment = "=0.10.18"
serde_json = "1.0.120"
jsonwebtoken = "9.3.0"
chrono = "0.4.38"

[dev-dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
tokio = { version = "1.38.0", features = ["full"] }
